@@ -110,6 +110,7 @@
 | [pig_squeal][]                    | MediaCollege.com             | CC0          |                         |
 | [pigeon][]                        | JavierSerrat                 | CC0          |                         |
 | [pistol_fire][]                   | DrinkingWindGames            | CC BY 3.0    |                         |
+| [pistol_reload][]                 | Bunny_Clark                  | CC BY 3.0    |                         |
 | [puppy_bark][]                    | moffet                       | CC0          |                         |
 | [quail][]                         | PrincessGrace                | CC0          |                         |
 | [raccoon*][raccoon]               | jnargus                      | CC BY        |                         |
@@ -321,6 +322,7 @@
 [pig_squeal]: https://www.mediacollege.com/downloads/sound-effects/animals/pig/
 [pigeon]: https://freesound.org/s/524345/
 [pistol_fire]: https://freesound.org/s/476240/
+[pistol_reload]: https://freesound.org/s/377549/
 [place_metal]: https://opengameart.org/node/3511
 [puppy_bark]: https://freesound.org/s/583142/
 [quail]: https://freesound.org/s/329371/
